@@ -17,6 +17,7 @@ HACKING.pod
 inc/MyBuilder.pm
 lib/App/Prove.pm
 lib/App/Prove/State.pm
+lib/App/Prove/State/Result.pm
 lib/TAP/Base.pm
 lib/TAP/Formatter/Color.pm
 lib/TAP/Formatter/Console.pm
